--- a/src/app/components/pages/products/show-product/show-product.component.html
+++ b/src/app/components/pages/products/show-product/show-product.component.html
@@ -23,8 +23,7 @@
           pButton
           pRipple
           label="Thêm mới"
-          style="height: 40px; width: 105px"
-          class="p-button-success"
+          style="height: 40px; width: 130px; border-radius: 10px;"
           [routerLink]="['/products/create-product']"
         ></button>
       </div>
@@ -132,9 +131,9 @@
                 <th style="width: 12%">Phân loại hàng</th>
                 <th style="width: 10%; text-align: right">Giá bán</th>
                 <th style="width: 7%; text-align: right">Tồn kho</th>
-                <th style="width: 13%; text-align: center">Trạng thái</th>
-                <th style="width: 13%; text-align: center">Thương hiệu</th>
-                <th style="width: 16%; text-align: center">Ngày tạo</th>
+                <th style="width: 10%; text-align: center">Trạng thái</th>
+                <th style="width: 12%; text-align: center">Thương hiệu</th>
+                <th style="width: 13%; text-align: center">Ngày tạo</th>
                 <th style="width: 20%; text-align: center">Thao tác</th>
               </tr>
             </ng-template>
