--- a/src/app/components/pages/products/create-product/create-product.component.html
+++ b/src/app/components/pages/products/create-product/create-product.component.html
@@ -24,11 +24,11 @@
                         </div>
                         <div class="processing">
                             <div class="processing-checkbox">
-                              <input type="radio" id="sanphamthuong" formControlName="productType" value="regular" />
+                              <input type="radio" id="sanphamthuong" formControlName="productType" [value]="0" />
                               <label style="padding-left: 10px;" for="sanphamthuong">Sản phẩm thường</label>
                             </div>
                             <div style="margin-left: 100px;" class="processing-checkbox">
-                              <input type="radio" id="sanphamserial" formControlName="productType" value="serial" />
+                              <input type="radio" id="sanphamserial" formControlName="productType" [value]="1" />
                               <label style="padding-left: 10px;" for="sanphamserial">Sản phẩm Serial/iMei</label>
                             </div>
                         </div>
@@ -243,7 +243,7 @@
                             </div>                     
                             <div class="col-lg-12">
                                 <div class="row">
-                                    <div class="col-lg-4"  *ngIf="productForm.get('productType').value === 'regular'">
+                                    <div class="col-lg-4"  *ngIf="productForm.get('productType').value === '0'">
                                         <label class="labelip">Kho hàng</label>
                                             <input
                                                 type="text"
@@ -253,6 +253,7 @@
                                                 formControlName="totalQuantity"
                                                 placeholder="Nhập kho hàng"
                                                 maxlength="100"
+                                                (keypress)="onKeyPress($event)"
                                             /> 
                                     </div>      
                                 </div>
@@ -501,7 +502,7 @@
                                                     />
                                                   </ng-template>
                                                   <div style="text-align: center; padding: 15px 20px;">
-                                                    {{ row.value }} - {{ value2.value }}
+                                                    {{ productForm.get('name').value }} - {{ row.value }} - {{ value2.value }}
                                                   </div>
                                                 </div>  
                                             </td>
@@ -538,7 +539,7 @@
                                                 {{ getPriceControlError(i, j) }}
                                               </div>
                                             </td>
-                                            <td  *ngIf="productForm.get('productType').value === 'regular'">
+                                            <td  *ngIf="productForm.get('productType').value === '0'">
                                               <input
                                                 class="form-control"
                                                 type="text"
